--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semana de Git</title>
+    <title>Cocos | Cocos Capital</title>
+    <!-- Link css -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
-    <h1>Semana 5 - Git y GitHub</h1>
-    
+    <h1>Invertir es para <span>todos</span></h1>
+
+    <p>Empezá a operar a través de <span>Cocos</span>. <br>
+        Unos pocos clicks y estás potenciando tus ahorros.</p>
+
 </body>
+
 </html>
