Creamos una section, ya terminamos el bloque 1

--- a/index.html
+++ b/index.html
@@ -12,10 +12,18 @@
 
 <body>
 
-    <h1>Invertir es para <span>todos</span></h1>
+    <section>
 
-    <p>Empezá a operar a través de <span>Cocos</span>. <br>
-        Unos pocos clicks y estás potenciando tus ahorros.</p>
+        <h1>Invertir es para <span>todos</span></h1>
+
+        <p>Empezá a operar a través de <span>Cocos</span>. <br>
+            Unos pocos clicks y estás potenciando tus ahorros.</p>
+        
+        <div>
+            <span>FÁCIL, INCLUSIVO Y SEGURO.</span>
+            <a href="#">Crea tu cuenta gratis.</a>
+        </div>
+    </section>
 
 </body>
 
