--- a/index.html
+++ b/index.html
@@ -14,14 +14,20 @@
 
     <section>
 
-        <h1>Invertir es para <span>todos</span></h1>
-
-        <p>Empezá a operar a través de <span>Cocos</span>. <br>
-            Unos pocos clicks y estás potenciando tus ahorros.</p>
-        
         <div>
-            <span>FÁCIL, INCLUSIVO Y SEGURO.</span>
-            <a href="#">Crea tu cuenta gratis.</a>
+            <h1>Invertir es para <span>todos</span></h1>
+
+            <p>Empezá a operar a través de <span>Cocos</span>. <br>
+                Unos pocos clicks y estás potenciando tus ahorros.</p>
+
+            <div>
+                <span>FÁCIL, INCLUSIVO Y SEGURO.</span>
+                <a href="#">Crea tu cuenta gratis.</a>
+            </div>
+        </div>
+
+        <div class="container-img">
+            <img src="img/avatar-3d.webp" alt="avatar 3d">
         </div>
     </section>
 
