Terminamos por hoy

--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 
 <body>
 
+    <header>
+        <img src="img/logo-cocos.png" alt="logo cocos">
+        <nav>
+            <ul>
+                <li><a href="#">Nosotros</a></li>
+                <li><a href="#">Aprendé</a></li>
+                <li><a href="#">Fondos</a></li>
+                <li><a href="#">Productos</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <section>
 
         <div>
